# generative-ai-projects

./: .gitignore  LICENSE  README.md
crewai-projects/agentic-daily-briefing/: README.md  agents.py  crew_main.py  main.py  pyproject.toml  requirements.txt  tasks.py  tools.py
crewai-projects/agentic-daily-briefing/data/: daily_news_briefing.md  daily_news_briefing_2.md  trending_news_research.md  trending_news_research_2.md
langchain-projects/agentic-search-engine/: README.md  app.py  pyproject.toml  requirements.txt
langchain-projects/astradb-multidoc-rag-hub/: README.md  app.py  pyproject.toml  requirements.txt
langchain-projects/conversational-pdf-assistant/: README.md  app.py  pyproject.toml  requirements.txt
langchain-projects/math-reasoning-agent/: README.md  app.py  pyproject.toml  requirements.txt
langchain-projects/multi-language-code-assistant/: README.md  app_v1_basic.py  app_v2_better_ui.py  modelfile  pyproject.toml  requirements.txt
langchain-projects/qa-chatbot/: README.md  app.py  pyproject.toml  requirements.txt
langchain-projects/research-paper-assistant-rag/: README.md  app.py  pyproject.toml  requirements.txt
langchain-projects/sql-chat-assistant/: README.md  app.py  pyproject.toml  requirements.txt  sqlite.py  student.db
langchain-projects/url-content-summarizer/: README.md  app.py  pyproject.toml  requirements.txt
