[project]
name = "agentic-daily-briefing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crewai[litellm]>=1.15.5",
    "crewai-tools>=1.15.5",
    "python-dotenv>=1.2.2",
    "langchain-huggingface>=1.2.2",
    "sentence-transformers>=5.6.0",
    "tavily-python>=0.7.26",
    "langsmith>=0.10.7",
]
