[project]
name = "agentic-search-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "groq==0.37.1",
    "langchain==1.3.12",
    "langchain-classic==1.0.8",
    "langchain-community==0.4.2",
    "langchain-core==1.4.9",
    "langchain-exa==1.1.0",
    "langchain-groq==1.1.3",
    "streamlit==1.59.1",
]
