[project]
name = "astradb-rag-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cassio>=0.1.10",
    "datasets>=5.0.0",
    "huggingface-hub>=1.23.0",
    "langchain>=1.3.13",
    "langchain-astradb>=1.0.0",
    "langchain-classic>=1.0.8",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.9",
    "langchain-huggingface>=1.2.2",
    "pypdf>=6.14.2",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.6.0",
    "streamlit>=1.59.2",
    "tiktoken>=0.13.0",
    "transformers>=5.13.1",
]
