[project]
name = "math-problem-solver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.3.13",
    "langchain-classic>=1.0.8",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.9",
    "langchain-google-genai>=4.2.7",
    "numexpr>=2.14.1",
    "streamlit>=1.59.2",
    "wikipedia>=1.4.0",
]
