[project]
name = "sql-chat-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.3.13",
    "langchain-classic>=1.0.8",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.9",
    "langchain-groq>=1.1.3",
    "mysql-connector-python>=9.7.0",
    "sqlalchemy>=2.0.51",
    "streamlit>=1.59.1",
]
