[project]
name = "url-content-summarizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.3.13",
    "langchain-classic>=1.0.8",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.9",
    "langchain-groq>=1.1.3",
    "pytube>=15.0.0",
    "streamlit>=1.59.1",
    "transformers>=5.13.1",
    "unstructured>=0.24.1",
    "validators>=0.35.0",
    "youtube-transcript-api>=1.2.4",
]
