[project]
name = "url-content-summarizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "en-core-web-sm",
    "langchain>=1.3.13",
    "langchain-classic>=1.0.8",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.9",
    "langchain-groq>=1.1.3",
    "pytube>=15.0.0",
    "spacy==3.8.14",
    "streamlit>=1.59.1",
    "transformers>=5.13.1",
    "unstructured>=0.24.1",
    "validators>=0.35.0",
    "youtube-transcript-api>=1.2.4",
]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
